First pass at re-written XML discovery done